--- a/resources/css/bare-simplicity.css
+++ b/resources/css/bare-simplicity.css
@@ -1,1 +1,24 @@
-/Users/dylngg/Documents/programming/bare-simplicity/stylesheet.css
+body {
+  margin: 40px auto;
+  max-width: 650px;
+  line-height: 1.6;
+  color : #3E4A52;
+  font-family: sans-serif;
+  font-size: 18px;
+  padding: 0 10px;
+}
+td, th {
+    padding: 5px;
+    text-align: left;
+}
+code, kbd, pre, samp {
+  background-color: #EEEEEE;
+  padding: 2px;
+}
+h1, h2, h3 {
+  color: #222C33;
+  line-height: 1.2;
+}
+hr {
+  border: .75px solid #5D707C;
+}
