--- a/resources/css/bare-simplicity.css
+++ b/resources/css/bare-simplicity.css
@@ -3,13 +3,9 @@ body {
   max-width: 650px;
   line-height: 1.6;
   color : #3E4A52;
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 18px;
   padding: 0 10px;
-}
-td, th {
-    padding: 5px;
-    text-align: left;
 }
 code, kbd, pre, samp {
   background-color: #EEEEEE;
